--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,10 @@
   scroll-behavior: smooth;
 }
 
+body{
+  background: rgb(55,255,64);
+  background: radial-gradient(circle, rgba(55,255,64,1) 0%, rgba(0,117,255,1) 100%);
+}
 @layer components {
   .max-container {
     max-width: 1440px;
